--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
-<h1>Hello World</h1>
-<p>Trying</p>
+<!DOCTYPE HTML>
+<head>
+    <meta name="robots" content="index, follow" />
+    <meta name="description" content="Website for testing purposes"/>
+    <title>This is test website for Spotibo crawler</title>
+</head>
+<body>
+    <h1>This is heading number one</h1>
+</body>
+</html>
