--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 </head>
 <body>
     <h1>This is heading number one</h1>
+    <h1>This is heading number two</h1>
+    <h1>This is heading number three</h1>
 </body>
 </html>
