--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE HTML>
+<html>
 <head>
     <meta name="robots" content="index, follow" />
     <meta name="description" content="Website for testing purposes"/>
