--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <meta name="robots" content="index, follow" />
+    <meta name="robots" content="index, nofollow" />
     <meta name="description" content="Website for testing purposes"/>
     <title>This is test website for Spotibo crawlerrrr</title>
 </head>
 <body>
     <h1>This is heading number one</h1>
-    <h1>This is heading number two lili</h1>
+    <h1>This is heading number two</h1>
     <h1>This is heading number three</h1>
 </body>
 </html>
