--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="robots" content="index, nofollow" />
     <meta name="description" content="Website for testing purposes"/>
-    <title>This is test website for Spotibo crawlerrrr</title>
+    <title>This is test website for Spotibo crawlerr</title>
 </head>
 <body>
     <h1>This is heading number one</h1>
