--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <meta name="robots" content="index, nofollow" />
+    <meta name="robots" content="index, follow" />
     <meta name="description" content="Websit for testing purposes"/>
-    <title>This is test website for Spotibo crawlerrrr</title>
+    <title>This is test website for Spotibo crawler</title>
 </head>
 <body>
     <h1>This is heading number one</h1>
