--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta name="robots" content="index, nofollow" />
-    <meta name="description" content="Websit for testing purposes"/>
+    <meta name="description" content="Website for testing purposes"/>
     <title>This is test website for Spotibo crawler</title>
 </head>
 <body>
