--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <meta name="robots" content="index, nofollow" />
+<!--     <meta name="robots" content="index, nofollow" /> -->
 <!--     <meta name="description" content="Website for testing purposes"/> -->
-    <title>This is test website for Spotibo crawler</title>
+<!--     <title>This is test website for Spotibo crawler</title> -->
 </head>
 <body>
     <h1>This is heading number one</h1>
