--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <meta name="robots" content="index, nofollow" />
+    <meta name="robots" content="index, follow" />
     <meta name="description" content="Website for testing purposes - change"/>
     <title>This is test website for Spotibo crawler</title>
 </head>
