--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="robots" content="index, follow" />
     <meta name="description" content="Website for testing purposes - change"/>
-    <title>This is test website for Spotibo crawler</title>
+    <title>This is test website for Spotibo crawler - maybe?</title>
 </head>
 <body>
     <h1>This is heading number one</h1>
