--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>This is heading number one</h1>
     <h1>This is heading number two</h1>
     <h1>This is heading number three</h1>
+    <h1>This is heading number four</h1>
 </body>
 </html>
