--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h1>This is heading number three</h1>
     <h1>This is heading number four</h1>
     <h1>This is heading number five</h1>
+    <h1>This is heading number six</h1>
 </body>
 </html>
