--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <h1>This is heading number four</h1>
     <h1>This is heading number five</h1>
     <h1>This is heading number six</h1>
+    <h2>Heading 2</h2>
 </body>
 </html>
