--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <h1>This is heading number five</h1>
     <h1>This is heading number six</h1>
     <h2>Heading 2</h2>
-    <a href="http://sme.sk>Odkaz</a>
+    <a href="http://sme.sk">Odkaz</a>
 </body>
 </html>
