--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="robots" content="index, follow" />
     <meta name="description" content="Website for testing purposes - change"/>
     <title>This is test website for Spotibo crawler - maybe?</title>
-    <link rel="alternate" href="https://ukul3l3.github.io/test.spotibo.github.io/" hreflang="en-US" />
+    <link rel="alternate" href="https://ukul3l3.github.io/test.spotibo.github.io/en" hreflang="en-US" />
     <script>
         (function () {
             var className = document.documentElement.className;
